# pyWarlight

./: .gitignore  Asia.txt  Asia_Europe.txt  LOGGING_VERBOSITY_FIX.md  NODE_FEATURES_USAGE_VERIFICATION.md  PPO_FIRST_EPOCH_FIX_SUMMARY.md  VALUE_COMPUTATION_VERIFICATION.md  analyze_fixed_gradients.py  analyze_tensorboard.py  cProfile.out  checkpoint_usage_example.py  comprehensive_debug_test.py  comprehensive_log_prob_test.py  debug_batch_consistency.py  debug_model_mode_issue.py  debug_simple_hypothesis.py  detailed_sage_analysis.py  entropy_guide.py  example_config_usage.py  main.py  monitor_values.py  oceania.txt  pyproject.toml  quick_log_analysis.py  requirements.txt  setup_and_run.ipynb  test_checkpoint_integration.py  test_models.py  test_ppo_fix.py  test_stable_config.py  test_value_computation.py  training_test_with_fix.py  verification_example.py  world.txt
res/model/: checkpoint.pt
src/agents/: Attila.py  Julius.py  Napoleon.py  RLGNNAgent.py  RandomAgent.py  Saladin.py
src/analysis/: run_tensorboard.py
src/config/: training_config.py
src/engine/: AgentBase.py  Config.py  Engine.py  (+2 more)
tests/: final_stability_test.py  final_verification_after_fixes.py  final_verification_test.py  simple_log_prob_test.py  test_actual_agent.py  test_actual_flow.py  test_entropy.py  test_explosion.py  test_final_fix.py  test_log_prob_capture.py  test_log_prob_fix.py  test_masking_fix.py  test_padded_edges.py  test_placement_stability.py  test_ppo_consistency.py  test_ppo_minimal.py  test_ppo_ratios.py  test_ratio_fix.py  test_realistic_scenario.py  test_stability_fixes.py
(+31 files in other folders)
